--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
   --color-white: #f3f3f3;
   --color-darkblue: #1b1b32;
-  --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
-  --color-green: #37af65;
+  --color-form-background: rgba(0, 0, 0, 0.781);
+  --color-submit: #1494df;
 }
 
 *,
@@ -31,8 +31,8 @@ body::before {
   background: var(--color-darkblue);
   background-image: linear-gradient(
       115deg,
-      rgba(58, 58, 158, 0.8),
-      rgba(136, 136, 206, 0.7)
+      rgba(61, 37, 0, 0.514),
+      rgba(204, 204, 204, 0.7)
     ),
     url("./images/restaurant.jpg");
   background-size: cover;
@@ -117,7 +117,7 @@ header {
 /* form */
 
 form {
-  background: var(--color-darkblue-alpha);
+  background: var(--color-form-background);
   padding: 2.5rem 0.625rem;
   border-radius: 0.25rem;
 }
@@ -165,7 +165,7 @@ form {
   display: block;
   width: 100%;
   padding: 0.75rem;
-  background: var(--color-green);
+  background: var(--color-submit);
   color: inherit;
   border-radius: 2px;
   cursor: pointer;
